# zetachain-solana-nft

./: Anchor.toml  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
programs/universal-nft/src/: constants.rs  error.rs  lib.rs
programs/universal-nft/src/instructions/: complete_cross_chain_transfer.rs  confirm_cross_chain_transfer.rs  deposit_and_call.rs  mint_nft.rs  mod.rs
programs/universal-nft/src/state/: mod.rs
tests/: universal-nft.ts
universal-nft/: CONTRIBUTING.md  ZETACHAIN_INTEGRATION.md  package.json
universal-nft/programs/universal-nft/: Cargo.toml
universal-nft/programs/universal-nft/src/instructions/: initialize.rs  initiate_cross_chain_transfer.rs  mod.rs  on_call.rs  on_revert.rs
universal-nft/programs/universal_nft/: Cargo.toml
universal-nft/programs/universal_nft/src/: lib.rs
universal-nft/scripts/: deploy-and-demo.ts
universal-nft/tests/: universal-nft.ts
universal-nft/web/: package-lock.json  package.json
universal-nft/web/.next/: react-loadable-manifest.json  trace
universal-nft/web/.next/server/: _error.js  middleware-react-loadable-manifest.js
universal-nft/web/idl/: universal_nft.json
universal-nft/web/pages/: index.tsx
web/: package-lock.json  package.json  tsconfig.json
web/.next/: trace
web/.next/server/pages/: _app.js  _error.js  index.js
web/.next/server/vendor-chunks/: @swc.js  next.js
web/.next/static/chunks/: webpack.js
web/.next/static/chunks/pages/: _app.js  (+1 more)
web/idl/: universal_nft.json
web/pages/: _app.tsx  index.tsx
web/public/: manifest.json
(+95 files in other folders)
