[package]
name = "universal_nft"
version = "0.1.0"
edition = "2021"

[lib]
name = "universal_nft"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "associated-token"] }
hex = "0.4"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
